fixed the hard to read menu

--- a/ianap.css
+++ b/ianap.css
@@ -1,4 +1,7 @@
-/* @override http://b.iamnotaprogrammer.com/wp-content/themes/ianap/ianap.css */
+/* @override 
+	http://b.iamnotaprogrammer.com/wp-content/themes/ianap/ianap.css
+	http://b.iamnotaprogrammer.com/wp-content/themes/thematic/library/styles/images.css
+*/
 
 @font-face {
 	font-family: 'HelsinkiRegular';
@@ -73,6 +76,15 @@ background-color: rgba(0,75,145,0.1);
 -webkit-border-radius: 10px;
 padding: 10px;
 margin-bottom: 10px;
+	border: 2px solid rgba(206,213,220,0.61);
+}
+
+div.entry-content img.alignleft{
+	float: left;
+	margin-right: 10px;
+	margin-bottom: 10px;
+	-moz-border-radius: 10px;
+-webkit-border-radius: 10px;
 }
 
 div#header {
@@ -98,7 +110,7 @@ h1#blog-description {
 	text-decoration:none;
 }
 
-.sf-menu li {
+.sf-menu li, li li {
 	background-color: #3a536a;
     -moz-border-radius-topleft: 5px;
     -webkit-border-top-left-radius: 5px;
@@ -107,7 +119,7 @@ h1#blog-description {
 	margin-left: 2px;
 }
 .sf-menu li a{
-	color: white;
+	color: #c5c5c5;
 	 -moz-border-radius-topleft: 5px;
     -webkit-border-top-left-radius: 5px;
     -moz-border-radius-topright :5px;
@@ -122,6 +134,12 @@ h1#blog-description {
 	background-color: rgba(113,155,194,0.52);
 }
 
+page_item{
+	color: black;
+}
+.sfHover{
+	color: black;
+}
 
 .sf-menu .current_page_item a{
 	background-color: white;
